# rel

./: Cargo.toml  TODO.md
experiments/: Cargo.toml
experiments/src/: lib.rs  short_string.rs
heresy/src/: alloc.rs
mischief/src/: in.rs  slot.rs
mischief/src/unique/: ghost.rs  mod.rs  static.rs
mischief_derive/src/: lib.rs
rel_alloc/: Cargo.toml
rel_alloc/bench_tests/: bench.rs  benchmarks.rs  test.rs
rel_alloc/bench_tests/log/: mod.rs
rel_alloc/bench_tests/mc_savedata/: mod.rs
rel_alloc/bench_tests/mesh/: mod.rs
rel_alloc/src/: alloc.rs  boxed.rs  string.rs  vec.rs
rel_allocators/: Cargo.toml
rel_allocators/src/: adapters.rs  brand.rs  control.rs  external.rs  legacy.rs  lib.rs  prefix.rs  slab.rs  unique_region.rs
rel_core/src/: portable.rs  rel_ref.rs
rel_core/src/emplace/: impls.rs
rel_core/src/move/: impls.rs
rel_example/: Cargo.toml
rel_example/src/: main.rs
situ/src/: mut.rs  ops.rs  owned_val.rs  ref.rs
situ/src/alloc/: allocator.rs  regional.rs
situ/src/drop/: impls.rs
