[package]
name = "experiments"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.mischief]
version = "0.1"
path = "../mischief"
default-features = false

[dependencies.munge]
version = "0.4"
git = "https://github.com/djkoloski/munge"

[dependencies.ptr_meta]
version = "0.2"
default-features = false

[dependencies.rel_alloc]
version = "0.1"
path = "../rel_alloc"

[dependencies.rel_core]
version = "0.1"
path = "../rel_core"
default-features = false

[dependencies.situ]
version = "0.1"
path = "../situ"
